@@ -19,8 +19,8 @@ capplets/default-applications/default-applications.desktop.in
 capplets/default-applications/gnome-default-applications-properties-structs.c
 capplets/default-applications/gnome-default-applications-properties.c
 capplets/default-applications/gnome-default-applications-properties.glade
-capplets/desktop-links/Accessibility.directory.in.in
-capplets/desktop-links/Advanced.directory.in.in
+capplets/desktop-links/Accessibility.directory.in
+capplets/desktop-links/Advanced.directory.in
 capplets/desktop-links/Sawfish/Sawfish.directory.in.in
 capplets/desktop-links/Sawfish/appearance-properties.desktop.in
 capplets/desktop-links/Sawfish/bindings-properties.desktop.in
@@ -58,13 +58,13 @@ capplets/keyboard/gnome-keyboard-properties.glade
 capplets/keyboard/keyboard.desktop.in
 capplets/mouse/gnome-mouse-properties.c
 capplets/mouse/gnome-mouse-properties.glade
-capplets/mouse/mouse.desktop.in
+capplets/mouse/gnome-settings-mouse.desktop.in
 capplets/network/gnome-network-preferences.c
 capplets/network/gnome-network-preferences.desktop.in
 capplets/network/gnome-network-preferences.glade
+capplets/sound/gnome-settings-sound.desktop.in
 capplets/sound/sound-properties-capplet.c
 capplets/sound/sound-properties.glade
-capplets/sound/sound.desktop.in
 capplets/theme-switcher/control/GNOME_Theme_Preview.server.in
 capplets/theme-switcher/control/control.c
 capplets/theme-switcher/gnome-theme-details.c
@@ -75,9 +75,8 @@ capplets/theme-switcher/gtk-theme-selector.desktop.in
 capplets/theme-switcher/theme-install.glade
 capplets/theme-switcher/theme-properties.glade
 capplets/theme-switcher/theme-switcher.c
-capplets/ui-properties/behavior.desktop.in
-capplets/ui-properties/behavior.desktop.in.in
 capplets/ui-properties/gnome-ui-properties.c
+capplets/ui-properties/gnome-ui-properties.desktop.in
 capplets/ui-properties/gnome-ui-properties.glade
 capplets/windows/gnome-window-properties.c
 capplets/windows/gnome-window-properties.glade
